# CommonAPI-someip

./: README.md
lib/: libCommonAPI.so.3.2.3  libvsomeip3-e2e.so.3.4.10
project/: CMakeLists.txt
project/cgen/commonapi_core_generator/: artifacts.xml
project/cgen/commonapi_core_generator/commonapi-core-generator.app/Contents/: Info.plist
project/cgen/commonapi_core_generator/configuration/: config.ini
project/cgen/commonapi_core_generator/configuration/org.eclipse.osgi/: framework.info.1
project/cgen/commonapi_core_generator/configuration/org.eclipse.update/: platform.xml
project/cgen/commonapi_core_generator/features/org.genivi.commonapi.console.feature_3.2.14.v202310241605/: feature.xml
project/cgen/commonapi_core_generator/features/org.genivi.commonapi.core.cli.feature_3.2.14.v202310241605/: feature.xml
project/cgen/commonapi_someip_generator/: artifacts.xml
project/cgen/commonapi_someip_generator/commonapi-someip-generator.app/Contents/: Info.plist
project/cgen/commonapi_someip_generator/configuration/: config.ini
project/fidl/: HelloWorld.fdepl  HelloWorld.fidl
project/src/: HelloWorldClient.cpp  HelloWorldService.cpp  HelloWorldStubImpl.cpp  HelloWorldStubImpl.hpp
project/src-gen/v1/commonapi/: HelloWorld.hpp  HelloWorldProxy.hpp  HelloWorldProxyBase.hpp  HelloWorldSomeIPCatalog.json  HelloWorldSomeIPDeployment.cpp  HelloWorldSomeIPDeployment.hpp  HelloWorldSomeIPProxy.cpp  HelloWorldSomeIPProxy.hpp  HelloWorldSomeIPStubAdapter.cpp  HelloWorldSomeIPStubAdapter.hpp  HelloWorldStub.hpp  HelloWorldStubDefault.hpp
(+15 files in other folders)
